# IOI_projekt

./: README.md  forecasting_PM10.ipynb  pm_10_and_weather_conditions.csv  predictions_for_2023-05-01.csv  preprocess_script.py  pyproject.toml  vis.py
Podatki_Raw/: tabela_2022_CE bolnica_14923.csv  tabela_2022_CE bolnica_14944.csv  tabela_2022_CE bolnica_15014.csv  tabela_2022_CE bolnica_15103.csv  tabela_2022_Iskrba_14923.csv  tabela_2022_Iskrba_15014.csv  tabela_2022_Koper_14923.csv  tabela_2022_Koper_14944.csv  tabela_2022_Koper_15103.csv  tabela_2022_Krvavec_14923.csv  tabela_2022_LJ Bežigrad_14923.csv  tabela_2022_LJ Bežigrad_14943.csv  tabela_2022_LJ Bežigrad_14944.csv  tabela_2022_LJ Bežigrad_15103.csv  tabela_2022_LJ Celovška_14944.csv  tabela_2022_LJ Celovška_15103.csv  tabela_2022_MB Titova_14944.csv  tabela_2022_MB Titova_15103.csv  tabela_2022_MB Vrbanski_14923.csv  tabela_2022_MB Vrbanski_14944.csv  tabela_2022_MB Vrbanski_15103.csv  tabela_2022_MS Rakičan_14923.csv  tabela_2022_MS Rakičan_14944.csv  tabela_2022_MS Rakičan_15103.csv  tabela_2022_NG Grčna_14923.csv  tabela_2022_NG Grčna_14944.csv  tabela_2022_NG Grčna_15103.csv  tabela_2022_Novo mesto_14923.csv  tabela_2022_Novo mesto_14944.csv  tabela_2022_Novo mesto_15103.csv  tabela_2022_Otlica_14923.csv  tabela_2022_Zagorje_14923.csv  tabela_2022_Zagorje_14944.csv  tabela_2022_Zagorje_15014.csv  tabela_2022_Zagorje_15103.csv  tabela_2023_CE Ljubljanska_18247.csv  tabela_2023_CE bolnica_14923.csv  tabela_2023_CE bolnica_14944.csv  tabela_2023_CE bolnica_15014.csv  tabela_2023_CE bolnica_15103.csv  (+96 more)
(+59 files in other folders)
