[project]
name = "IOI_projekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Iztok Bajcar, Liza Logar, Luka Volk", email = "ib8548@student.uni-lj.si" },
]
dependencies = ["pandas>=2.3.3", "numpy>=2.3.5", "geopandas>=1.1.1", "seaborn>=0.13.2", "pyqt5>=5.15.11"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
